# collate-vikas

ingestion_game/: core.py  ingestion_game_cli.py  input.txt  main_execution.py  models.py  pyproject.toml  readme.md
ingestion_game/src/ingestion_game/: cli.py
ingestion_game/src/ingestion_game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
